--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@ body,html{
     font-family: "Roboto", serif;
     font-weight: 400;
     font-style: normal;
+
+}
+img{
+  width: 100%;
 }
 
 .header-top {
