--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body,html{
     font-family: "Roboto", serif;
     font-weight: 400;
     font-style: normal;
-
+    overflow-x: hidden;
 }
 img{
   width: 100%;
@@ -1334,4 +1334,125 @@ form {
     margin-top: 1.25rem;
     padding-left: 15%;
   }
+}
+
+@media screen and (max-width: 575.98px){
+  .navbar-collapse {
+    padding-bottom: 20px;
+  }
+  .header-contact li a{
+    font-size: 14px;
+    margin-right: 0;
+  }
+  #location{
+    display: none;
+  }
+  .empowering-communities img{
+    display: none;
+  }
+  .hero-section {
+    background-position: 40%;
+  }
+  .hero-section h1{
+    margin-top: 8rem;
+  }
+  .hero-section p {
+
+    font-size: 1rem;
+  }
+ .service-page{
+  height: 28vh;
+ }
+ .service-head{
+  font-size: 1.5rem;
+ }
+ .supportive-button{
+  right:20%;
+ }
+ .empowering-communities{
+  height:88vh;
+ }
+ .empowering-communities h1{
+  font-size: 1.5rem;
+ }
+ .empowering-communities p{
+  font-size: 1rem;
+ }
+ .empowering-communities h2{
+  font-size: 1.25rem;
+  margin-top: 2rem;
+  margin-bottom: 1.5rem;
+ }
+ .features-list{
+  font-size: 1rem;
+ }
+ .experience{
+  height: 48vh;
+ }
+
+ .exp-tab img{
+  height: 50px;
+  width: auto;
+ }
+ .speciality{
+  padding-top: 3rem;
+ }
+ .speciality-head{
+  font-size: 1.5rem;
+  margin-bottom: 0;
+ }
+ .speciality-item h4{
+  font-size: 1.25rem;
+ }
+ .info{
+  height: 55vh ;
+  max-width: none;
+ }
+ .info h1{
+  padding-top: 2.5rem;
+  font-size: 1.5rem;
+  line-height: 32px;
+  text-align: center;
+ }
+ .info p{
+  font-size: 1rem;
+  line-height: 1.5rem;
+  padding: 0rem 0.5rem;
+ }
+ .projects-showcase{
+  height: 50vh;
+
+ }
+ .section-title{
+  font-size: 1.5rem;
+  padding-top: 1.25rem;
+ }
+ .projects-showcase{
+ 
+  height: 150vh;
+ }
+.section-title-test{
+  font-size: 1.5rem;
+}
+.test-column{
+  padding-left: 1.5rem;
+}
+ .form-section .container{
+  padding: 0;
+ }
+ .footer img{
+  height: 50px;
+  width: auto;
+  margin-top: 1rem;
+  padding-left: 3.2rem;
+ }
+ .footer-column h3{
+  padding-top: 1.5rem;
+  font-size: 1.5rem;
+ }
+ .footer-bottom{
+  text-align: center;
+ }
+
+
 }
